<?xml version="1.0"?>
<package format="3">
  <name>astrobee_handrail_8_5</name>
  <version>0.0.0</version>
  <description>
    ISS Handrail 8.5"
  </description>
  <license>
    Apache License, Version 2.0
  </license>
  <author email="astrobee-fsw@nx.arc.nasa.gov">
    Astrobee Flight Software
  </author>
  <maintainer email="astrobee-fsw@nx.arc.nasa.gov">
    Astrobee Flight Software
  </maintainer>
  <build_depend condition="$ROS_VERSION == 1">catkin</build_depend>
  <build_depend condition="$ROS_VERSION == 2">ament_cmake</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}/media"/>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
