<?xml version="1.0"?>
<package format="3">
  <name>discower_platforms</name>
  <version>0.0.0</version>
  <description>
    Description of the DISCOWER COSMO Lab
  </description>
  <license>
    Apache License, Version 2.0
  </license>
  <author email="padr@kth.se">
    Pedro Roque
  </author>
  <maintainer email="padr@kth.se">
    Pedro Roque
  </maintainer>
  <build_depend condition="$ROS_VERSION == 1">catkin</build_depend>
  <build_depend condition="$ROS_VERSION == 2">ament_cmake</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <gazebo_ros gazebo_media_path="${prefix}/media"/>
  </export>
</package>
